fix courses tag
